<package>
  <name>velma_model_sym</name>
  <version>1.0.0</version>
  <description>
    This package contains symbolic model generator for velma.
  </description>
  <author email="dawid.seredynski@gmail.com">Dawid Seredynski</author>
  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>

  <license>GNU v.2</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
